s3 file upload/download. Metadata download
