# internal/app/fileservice/handlers/fileservicehandler.go
@@ -34,7 +34,8 @@ func (fh *FileServiceHandler) FileProcessing(w http.ResponseWriter, r *http.Requ
 		return
 	}
 	queryValues := r.URL.Query()
-	if len(queryValues["iin"]) == 0 || len(queryValues["filename"]) == 0 {
+	if len(queryValues["iin"]) == 0 || len(queryValues["filename"]) == 0 ||
+		len(queryValues["iin"][0]) < 12 || len(queryValues["filename"][0]) <= 0 {
 		w.WriteHeader(http.StatusBadRequest)
 		fh.codec.Write(w, nil, fmt.Errorf("IIN or Filename cannot be empty"))
 		return
@@ -53,32 +54,51 @@ func (fh *FileServiceHandler) FileProcessing(w http.ResponseWriter, r *http.Requ
 	awsFile := &model.AWSModel{
 		IIN: queryValues["iin"][0], FileName: queryValues["filename"][0], Metadata: metadata, File: file,
 	}
-	if err := fh.service.StoreFile(awsFile); err != nil {
+	if err := fh.service.StoreFile(r.Context(), awsFile); err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
 		fh.codec.Write(w, nil, fmt.Errorf("Error storing file to s3, %v", err))
 		return
 	}
-	fileID, saveErr := fh.service.SaveFileData(awsFile)
-	if saveErr != nil {
+	if saveErr := fh.service.SaveFileData(r.Context(), awsFile); saveErr != nil {
 		w.WriteHeader(http.StatusInternalServerError)
 		fh.codec.Write(w, nil, fmt.Errorf("Error saving file metadata to DB, %v", saveErr))
 		return
 	}
-	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
-	fh.codec.Write(w, nil, fileID)
+	fh.codec.Write(w, nil, awsFile.GetFileID())
 }
 
 // GetFileMetadata ...
 func (fh *FileServiceHandler) GetFileMetadata(w http.ResponseWriter, r *http.Request) {
-	id := mux.Vars(r)["file_id"]
-	metadata, err := fh.service.GetFileMetadata(id)
+	id, ok := mux.Vars(r)["file_metadata_id"]
+	if !ok {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	metadata, err := fh.service.GetFileMetadata(r.Context(), id)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
 		fh.codec.Write(w, nil, err)
 		return
 	}
-	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	w.Write([]byte(metadata))
+}
+
+// DownloadFile ...
+func (fh *FileServiceHandler) DownloadFile(w http.ResponseWriter, r *http.Request) {
+	id, ok := mux.Vars(r)["file_download_id"]
+	if !ok {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	file, filename, err := fh.service.DownloadFile(r.Context(), id)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		fh.codec.Write(w, nil, err)
+		return
+	}
+	w.Header().Set("Content-Type", "application/octet-stream")
+	w.Header().Set("Content-Disposition", fmt.Sprintf("attachment; filename=%s", filename))
+	w.Write(file)
 }
